tests/baselines/reference/overloadsAndTypeArgumentArity(strict=true).errors.txt
overloadsAndTypeArgumentArity.ts(7,1): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== overloadsAndTypeArgumentArity.ts (1 errors) ====
    declare function Callbacks(flags?: string): void;
    declare function Callbacks<T>(flags?: string): void;
    declare function Callbacks<T1, T2>(flags?: string): void;
    declare function Callbacks<T1, T2, T3>(flags?: string): void;
    
    Callbacks<number, string, boolean>('s'); // no error
    new Callbacks<number, string, boolean>('s'); // no error
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.